Fix displaying overflowed element in modal

--- a/src/ggrc/assets/stylesheets/modules/_modal.scss
+++ b/src/ggrc/assets/stylesheets/modules/_modal.scss
@@ -29,6 +29,8 @@
   height: auto !important;
   position: absolute;
   top: 12%;
+  overflow: visible;
+
   .small-info {
     h3 {
       font-weight:normal;
@@ -270,6 +272,7 @@
   .modal-body {
     max-height:none;
     padding: 20px 15px 20px 20px;
+    overflow: visible;
     &.choose-object-wrap {
       padding: 20px;
       overflow: visible;
